--- a/E0-Practise/index.html
+++ b/E0-Practise/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E0 - Practise React</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./index.js" type="module"></script>
+    <script src="./src/index.js" type="module"></script>
 </head>
+
 <body>
     <div id="root">Not Rendered</div>
 </body>
+
 </html
